--- a/config.toml
+++ b/config.toml
@@ -160,7 +160,8 @@ googleAnalitycsID = "G-T50Z5LV32L"
 # Contact Information
 # mobile = "0955 540 5110"
 # phone = "0955 540 5110"
-email = "josemordeno1955@gmail.com"
+email = "pantrypoints@gmail.com"
+# email = "josemordeno1955@gmail.com"
 location = "Metro Manila"
 copyright = "| @2022 [Pantry Peers](https://pantrypoints.com/build) |"
 # All Rights Reserved
