--- a/config.toml
+++ b/config.toml
@@ -163,7 +163,7 @@ googleAnalitycsID = "G-T50Z5LV32L"
 email = "pantrypoints@gmail.com"
 # email = "josemordeno1955@gmail.com"
 location = "Metro Manila"
-copyright = "| @2022 [Pantry Peers](https://pantrypoints.com/build) |"
+copyright = "| @2022 [Pantry Peers](https://pantrypoints.com/build) and [Superphysics](https://superphysics.org) |"
 # All Rights Reserved
   # Preloader
   [params.preloader]
