--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -128,10 +128,10 @@ dishes:
   title : "Our Most Popular Supplements"
   subtitle: "Ask us for more details"
   items :
-    - name: "Aromatherapy Oil"
-      image: "/graphics/ayusaroma.jpg"
-      description: "For a relaxing massage"      
-      link: "/topicals/aroma/"
+    - name: "Cancon 175"
+      image: "/h/cancon.png"
+      description: "Helps control the spread of cancer"      
+      link: "/supplements/cancon/"
     - name: "Hair Rejuv"
       image: "/graphics/ayushair.jpg"
       description: "For Falling Hair and Hair Growth"
